discovered the overflow hidden bug and addressed it for cross-browser compatability

--- a/app/assets/stylesheets/site.css
+++ b/app/assets/stylesheets/site.css
@@ -62,7 +62,7 @@
 
 .search-wrapper .fa-search {
   position: absolute;
-  top: 50%;
+  top: 57%;
   left: 50%;
   margin-left: -65px;
   margin-top: 2px;
@@ -99,6 +99,7 @@
   overflow: hidden;
   text-overflow: ellipsis;
   display: inline-block;
+  vertical-align: top;
 }
 
 .top-notifications-wrapper {
@@ -218,7 +219,8 @@
   text-overflow: ellipsis;
   display: inline-block;
   position: relative;
-  top: 6px;
+  vertical-align: top;
+  top: 4px;
   left: 2px;
 }
 
